force-app/main/default/objects/Forward_FOB_Contract__c/Forward_FOB_Contract__c.object-meta.xml
<CustomObject>
    <label>Forward FOB Contract</label>
    <nameField>
        <displayFormat>FBF-{000000}</displayFormat>
        <label>Forward Contract FOB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward FOB Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>