force-app/main/default/objects/Forward_FOB_Contract__c/fields/Bank_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contract_Amount__c</fullName>
    <label>Bank Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>