force-app/main/default/objects/Forward_FOB_Contract__c/fields/Contract_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rate__c</fullName>
    <formula>Spot_Rate__c + Premium_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Spot Rate + Premium Discount</inlineHelpText>
    <label>Contract Rate</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>