force-app/main/default/objects/Forward_FOB_Contract__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date (Buy)</label>
    <type>Date</type>
</CustomField>