force-app/main/default/objects/Forward_FOB_Contract__c/fields/Effective_Date_Sell_Execute__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Sell_Execute__c</fullName>
    <label>Effective Date (Sell/Execute)</label>
    <type>Date</type>
</CustomField>