force-app/main/default/objects/Forward_FOB_Contract__c/fields/Execution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Execution_Amount__c</fullName>
    <label>Contract Sold Amount (Execution Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>