force-app/main/default/objects/Forward_FOB_Contract__c/fields/Premium_Discount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Discount__c</fullName>
    <label>Premium(+) / Discount(-)</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>