force-app/main/default/objects/Forward_FOB_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Annulled</fullName>
            </value>
            <value>
                <fullName>Buy</fullName>
                <isActive>false</isActive>
                <label>Buy</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Execute</fullName>
                <isActive>false</isActive>
                <label>Execute</label>
            </value>
            <value>
                <fullName>Spot Rate</fullName>
                <isActive>false</isActive>
                <label>Spot Rate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>