force-app/main/default/objects/Forward_FOB_Contract__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Transaction Date (Buy)</label>
    <type>Date</type>
</CustomField>