force-app/main/default/objects/Forward_FOB_Contract__c/fields/Transaction_Date_Sell__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Sell__c</fullName>
    <label>Transaction Date (Sell/Execute)</label>
    <type>Date</type>
</CustomField>