force-app/main/default/objects/Forward_FOB_Contract__c/validationRules/Can_not_update_Cover_Percentage_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_update_Cover_Percentage_to_100</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(NOT((LEFT(TEXT( Purchase_Order__r.Franchise__c ), 3)  = &apos;MIT&apos;)), NOT((LEFT(TEXT(Purchase_Order__r.Franchise__c ), 5)  = &apos;MAXUS&apos;))),  ISCHANGED(Cover_Percentage__c ), Cover_Percentage__c = 1)</errorConditionFormula>
    <errorMessage>Can not update Cover Percentage to 100%</errorMessage>
</ValidationRule>